--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "dist"
   ],
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^17 || ^18 || ^19",
+    "react-dom": "^17 || ^18 || ^19"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
