(refactor): Add demo section to the readme, change homepage in the package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/rybchynski/react-animated-line-clamp/issues"
   },
-  "homepage": "https://github.com/rybchynski/react-animated-line-clamp",
+  "homepage": "https://react-animated-line-clamp-demo-ub1r.vercel.app/",
   "keywords": [
     "react",
     "react line clamp",
